ended screen version still have to fix layout overflow

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body{
 .top-screen{
     display: flex;
     flex-direction: row;
+    
 }
 
 /*/flex screen*/
@@ -21,6 +22,7 @@ body{
     height: calc(100vh - 100px);
     width:260px;
     padding: 2em 1em 0.5em 1em;
+    
 }
 
 nav {
@@ -145,8 +147,11 @@ nav {
 .main-bgcolor{
     background-color: #141922;
     width: calc(100% - 260px);
-    
-    
+}
+
+
+.main-display{
+    overflow-y: scroll;
 }
 
 /*barra upgrade*/
@@ -177,9 +182,6 @@ nav {
 
 /*inizio main display*/
 
-.main-display{
-    overflow-y: scroll;
-}
 
 /*lista pagine*/
 .main-page-list{
@@ -302,6 +304,33 @@ nav {
 .john-doe .subtitle{
     margin-bottom: 1em;
 }
+/*fine section John Doe*/
+
+/*section artisti*/
+.artisti{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+
+    padding: 2em 30px;
+    color: white;
+}
+
+
+.artisti h2{
+    font-size: 2.5em;
+}
+
+
+.artisti .subtitle{
+    margin-bottom: 1em;
+}
+
+.artisti .card-img-container{
+    border-radius: 50%;
+    overflow: hidden;
+}
+
 
 
 /*fine main-------------------------------------*/
@@ -317,12 +346,6 @@ nav {
     justify-content: space-between;
     width: 100%;
     height: 100px;
-
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    z-index: 1;
-
   
 
     background-color:#282828 ;
